# hysplit

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml
docs/: generate_readme_plots.py
docs/tutorials/: getting_started.ipynb
hysplit/: __init__.py
hysplit/core/: __init__.py  config.py  dispersion.py  trajectory.py
hysplit/cpp/: __init__.py  parsers.cpp
hysplit/io/: __init__.py  readers.py
hysplit/met/: __init__.py  downloaders.py
hysplit/viz/: __init__.py  plotting.py
hysplit/workflows/: __init__.py  batch.py  download.py  run.py
tests/comparison/: COMPARISON_RESULTS.md  PERFORMANCE_ANALYSIS.md  benchmark_python.py  benchmark_r.R  compare_outputs.py  compare_results.py  generate_benchmark_report.py  out_btraj--fwd-12-03-10-00-1lat_42p83752_lon_-80p30364-hgt_50-48h  out_btraj--fwd-12-03-10-00-1lat_43p65107_lon_-79p34702-hgt_50-48h  out_btraj--fwd-12-03-10-00-1lat_45p50169_lon_-73p56725-hgt_50-48h  out_btraj--fwd-12-03-10-00-1lat_49p28273_lon_-123p12074-hgt_50-48h  out_btraj--fwd-12-03-10-00-1lat_51p04532_lon_-114p05719-hgt_50-48h  out_btraj--fwd-12-03-10-06-1lat_42p83752_lon_-80p30364-hgt_50-48h  out_btraj--fwd-12-03-10-06-1lat_43p65107_lon_-79p34702-hgt_50-48h  out_btraj--fwd-12-03-10-06-1lat_45p50169_lon_-73p56725-hgt_50-48h  out_btraj--fwd-12-03-10-06-1lat_49p28273_lon_-123p12074-hgt_50-48h  out_btraj--fwd-12-03-10-12-1lat_42p83752_lon_-80p30364-hgt_50-48h  out_btraj--fwd-12-03-10-12-1lat_43p65107_lon_-79p34702-hgt_50-48h  out_btraj--fwd-12-03-10-12-1lat_45p50169_lon_-73p56725-hgt_50-48h  out_btraj--fwd-12-03-10-12-1lat_49p28273_lon_-123p12074-hgt_50-48h  out_btraj--fwd-12-03-10-12-1lat_51p04532_lon_-114p05719-hgt_50-48h  out_btraj--fwd-12-03-10-18-1lat_42p83752_lon_-80p30364-hgt_50-48h  out_btraj--fwd-12-03-10-18-1lat_43p65107_lon_-79p34702-hgt_50-48h  out_btraj--fwd-12-03-10-18-1lat_45p50169_lon_-73p56725-hgt_50-48h  out_btraj--fwd-12-03-10-18-1lat_49p28273_lon_-123p12074-hgt_50-48h  out_btraj--fwd-12-03-10-18-1lat_51p04532_lon_-114p05719-hgt_50-48h  out_btraj--fwd-12-03-11-00-1lat_42p83752_lon_-80p30364-hgt_50-48h  out_btraj--fwd-12-03-11-00-1lat_43p65107_lon_-79p34702-hgt_50-48h  out_btraj--fwd-12-03-11-00-1lat_45p50169_lon_-73p56725-hgt_50-48h  out_btraj--fwd-12-03-11-00-1lat_49p28273_lon_-123p12074-hgt_50-48h  out_btraj--fwd-12-03-11-00-1lat_51p04532_lon_-114p05719-hgt_50-48h  out_btraj--fwd-12-03-11-06-1lat_42p83752_lon_-80p30364-hgt_50-48h  out_btraj--fwd-12-03-11-06-1lat_43p65107_lon_-79p34702-hgt_50-48h  out_btraj--fwd-12-03-11-06-1lat_45p50169_lon_-73p56725-hgt_50-48h  out_btraj--fwd-12-03-11-06-1lat_49p28273_lon_-123p12074-hgt_50-48h  out_btraj--fwd-12-03-11-06-1lat_51p04532_lon_-114p05719-hgt_50-48h  out_btraj--fwd-12-03-11-12-1lat_42p83752_lon_-80p30364-hgt_50-48h  out_btraj--fwd-12-03-11-12-1lat_43p65107_lon_-79p34702-hgt_50-48h  (+217 more)
tests/comparison/config_test/: ASCDATA.CFG  (+1 more)
(+1 files in other folders)
